--- a/eventos.html
+++ b/eventos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<header><h1> <img align="center" style="display: inline; margin-left: auto; margin-right: auto;" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.malaga.eu%2Fexport%2Fsites%2Fmalagaeu%2Fel-ayuntamiento%2F.galleries%2FImagen-Corporativa%2FDOCUMENTOS-Escudo-simplificado%2Fayto-vertical-2lineas-positivo.png&tbnid=fhVoU5wZX7HU7M&vet=12ahUKEwjjzpr27-2CAxUvXqQEHRhjC6AQMygCegQIARB3..i&imgrefurl=https%3A%2F%2Fwww.malaga.eu%2Fel-ayuntamiento%2Fimagen-corporativa%2F&docid=UDdJ30mWG0hKNM&w=3579&h=2551&q=logo%20ayuntam&ved=2ahUKEwjjzpr27-2CAxUvXqQEHRhjC6AQMygCegQIARB3" alt="" width="100" height="70" />Ayuntamiento de Málaga</h1> </header>
+<header><h1> <img align="center" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.malaga.eu%2Fexport%2Fsites%2Fmalagaeu%2Fel-ayuntamiento%2F.galleries%2FImagen-Corporativa%2FDOCUMENTOS-Escudo-simplificado%2Fayto-vertical-2lineas-positivo.png&tbnid=fhVoU5wZX7HU7M&vet=12ahUKEwjjzpr27-2CAxUvXqQEHRhjC6AQMygCegQIARB3..i&imgrefurl=https%3A%2F%2Fwww.malaga.eu%2Fel-ayuntamiento%2Fimagen-corporativa%2F&docid=UDdJ30mWG0hKNM&w=3579&h=2551&q=logo%20ayuntam&ved=2ahUKEwjjzpr27-2CAxUvXqQEHRhjC6AQMygCegQIARB3" alt="" width="100" height="70" />Ayuntamiento de Málaga</h1> </header>
 <body style="background-color:lightblue;>
 <head>
 <h1  style="text-align: center;">Eventos en Málaga</h1> 
